# NomaDimension

./: .gitignore  CMakeLists.txt
app/: check_poset.cpp  common.cpp  count_isomorphic.cpp  enumerate_grouped.cpp  enumerate_isomorphic.cpp  generate_flat_grid.cpp  generate_one_grouped.cpp
count/: 4_15_1.txt  4_17_2.txt  4_20_1.txt  5_15_1.txt
count_groups/: 2_2_4.txt  2_2_5.txt  2_2_6.txt  2_2_7.txt  2_2_8.txt  2_3_10.txt  2_3_10_broken.txt  2_3_9.txt  3_2_9.txt
count_isomorphic/: 2_6.txt  3_3.txt  3_3_nk.txt  3_4.txt  3_5.txt  3_6.txt  3_7.txt  3_8.txt  4_3.txt  4_5.txt  4_5_nk.txt  4_6.txt  4_6_nk.txt  4_7.txt  4_8.txt  5_7.txt  5_7_nk.txt  5_8.txt  6_10.txt  6_9.txt  6_9_nk.txt  run.bat
count_synced/: 4_4.txt  4_5.txt  4_6.txt  4_7.txt  5_6.txt  5_7.txt  6_9.txt  run.bat
flat_grid/: 3_3.txt  3_4.txt  3_5.txt  3_6.txt  3_7.txt  3_8.txt  4_5.txt  4_6.txt  4_7.txt  4_8.txt  5_7.txt  5_8.txt  5_9.txt  6_10.txt  6_9.txt  7_11.txt  run.bat
flat_grid/p1p2/: 4_5  5_7  6_9
include/: concurrentqueue.h  floyd.hpp  job_managment.h  process_graph.hpp  sync_functions.hpp  utils.hpp
non_2_dim/isomorphic/: 4_4.txt  4_4_nk.txt  4_5.txt  4_5_nk.txt  4_6.txt  4_6_nk.txt  4_7.txt  4_8.txt  5_6.txt  5_6_nk.txt  5_7.txt  5_7_nk.txt  run.bat
src/: floyd.cpp  main.cpp  process_graph.cpp  utils.cpp
